- 가계부 내역 추가 모달 레이아웃 - 가계부 내역 스타일링

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,3 +8,10 @@
 .ant-picker-calendar-header {
     display: none;
 }
+.account-book-list-item {
+    cursor: pointer;
+
+}
+.account-book-list-item:hover {
+    opacity: 0.7;
+}
